--- a/bank-customer-dev.properties
+++ b/bank-customer-dev.properties
@@ -1,1 +1,5 @@
 application.name= bank customer dev configuration default
+spring.data.mongodb.database=bootcamp
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+server.port=9006
