--- a/banking-product-dev.properties
+++ b/banking-product-dev.properties
@@ -1,1 +1,5 @@
 application.name= bank product dev configuration default
+spring.data.mongodb.database=bootcamp
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+server.port=9007
