--- a/bank-customer-dev.properties
+++ b/bank-customer-dev.properties
@@ -1,5 +1,7 @@
-application.name= bank customer dev configuration default
 spring.data.mongodb.database=bootcamp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 server.port=9006
+#propiedades eureka server
+#direccion a la que se conecta el microservicio con eureka
+eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:8761/eureka
