--- a/bank-movements-dev.properties
+++ b/bank-movements-dev.properties
@@ -1,5 +1,6 @@
-application.name= bank movements dev configuration default
 spring.data.mongodb.database=bootcamp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 server.port=9010
+#propiedades eureka server
+eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:8761/eureka
