--- a/credit-card-dev.properties
+++ b/credit-card-dev.properties
@@ -1,5 +1,6 @@
-application.name= credit card dev configuration default
 spring.data.mongodb.database=bootcamp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 server.port=9009
+#propiedades eureka server
+eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:8761/eureka
