--- a/credit-card-dev.properties
+++ b/credit-card-dev.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=bootcamp
+spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 server.port=9009
